--- a/calendar/base/themes/common/today-pane.css
+++ b/calendar/base/themes/common/today-pane.css
@@ -77,6 +77,9 @@
 
 #today-button {
   list-style-image: url("chrome://calendar-common/skin/widgets/nav-today.svg");
+  -moz-context-properties: fill, fill-opacity;
+  fill: currentColor;
+  fill-opacity: var(--toolbarbutton-icon-fill-opacity);
 }
 
 .miniday-nav-buttons[disabled] {
@@ -109,6 +112,7 @@
 
 #todaypane-new-event-button {
   -moz-user-focus: normal;
+  list-style-image: url(chrome://calendar-common/skin/icons/newevent.svg);
 }
 
 #todaypane-new-event-button > .toolbarbutton-text {
