--- a/calendar/lightning/themes/linux/lightning-toolbar.css
+++ b/calendar/lightning/themes/linux/lightning-toolbar.css
@@ -2,104 +2,4 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-/* Lightning "Calendar" Toolbarbutton */
-
-#lightning-button-calendar {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#calendar-tab);
-}
-
-#lightning-button-tasks {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#task-tab);
-}
-
-#calendar-synchronize-button,
-#task-synchronize-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#synchronize);
-}
-
-#extractEventButton,
-#task-newevent-button,
-#hdrExtractEventButton,
-#calendar-newevent-button {
-    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#newevent);
-}
-
-#extractTaskButton,
-#task-newtask-button,
-#hdrExtractTaskButton,
-#calendar-newtask-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#newtask);
-}
-
-#calendar-edit-button,
-#task-edit-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#edit);
-}
-
-#calendar-delete-button,
-#task-delete-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#delete);
-}
-
-#calendar-goto-today-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#today);
-}
-
-#calendar-print-button,
-#task-print-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#print);
-}
-
-#calendar-unifinder-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#find);
-}
-
-toolbar[brighttext] #lightning-button-calendar {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#calendar-tab-inverted);
-}
-
-toolbar[brighttext] #lightning-button-tasks {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#task-tab-inverted);
-}
-
-toolbar[brighttext] #calendar-synchronize-button,
-toolbar[brighttext] #task-synchronize-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#synchronize-inverted);
-}
-
-toolbar[brighttext] #extractEventButton,
-toolbar[brighttext] #task-newevent-button,
-toolbar[brighttext] #hdrExtractEventButton,
-toolbar[brighttext] #calendar-newevent-button {
-    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#newevent-inverted);
-}
-
-toolbar[brighttext] #extractTaskButton,
-toolbar[brighttext] #task-newtask-button,
-toolbar[brighttext] #hdrExtractTaskButton,
-toolbar[brighttext] #calendar-newtask-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#newtask-inverted);
-}
-
-toolbar[brighttext] #calendar-edit-button,
-toolbar[brighttext] #task-edit-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#edit-inverted);
-}
-
-toolbar[brighttext] #calendar-delete-button,
-toolbar[brighttext] #task-delete-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#delete-inverted);
-}
-
-toolbar[brighttext] #calendar-goto-today-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#today-inverted);
-}
-
-toolbar[brighttext] #calendar-print-button,
-toolbar[brighttext] #task-print-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#print-inverted);
-}
-
-toolbar[brighttext] #calendar-unifinder-button {
-  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#find-inverted);
-}
+@import url(chrome://lightning-common/skin/lightning-toolbar.css);
