--- a/calendar/lightning/themes/common/lightning.css
+++ b/calendar/lightning/themes/common/lightning.css
@@ -2,9 +2,31 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
+/* ::: new tab buttons ::: */
+#calendar-tab-button,
+#newMsgButton-calendar-menuitem {
+    list-style-image: url(chrome://calendar-common/skin/icons/calendar-tab.svg);
+    -moz-image-region: auto;
+}
+
+#task-tab-button,
+#newMsgButton-task-menuitem {
+    list-style-image: url(chrome://calendar-common/skin/icons/task-tab.svg);
+    -moz-image-region: auto;
+}
+
 /* avoids contributing to the min width when Lightning is not selected */
 #calendarTabPanel:not([selected]) {
   visibility: collapse;
+}
+
+#calendar-status-todaypane-button > stack > .toolbarbutton-icon-begin {
+    list-style-image: url(chrome://calendar-common/skin/icons/pane.svg);
+    width: 16px;
+    height: 16px;
+    -moz-context-properties: fill, fill-opacity;
+    fill: currentColor;
+    fill-opacity: var(--toolbarbutton-icon-fill-opacity);
 }
 
 #calendar-status-todaypane-button > stack > .toolbarbutton-day-text {
@@ -27,16 +49,44 @@
   display: none;
 }
 
-#task-tab-button .toolbarbutton-icon,
-#calendar-tab-button .toolbarbutton-icon,
-.calbar-toolbarbutton-1 .toolbarbutton-icon,
-toolbarpaletteitem > .msgHeaderView-button .toolbarbutton-icon,
-#task-actions-toolbar > .msgHeaderView-button .toolbarbutton-icon {
-  width: 18px;
-  height: 18px;
-}
-
 /* Write button */
 #newMsgButton-mail-menuitem {
   list-style-image: url(chrome://messenger/skin/icons/newmsg.svg);
+}
+
+.imipAcceptRecurrencesButton,
+.imipAcceptButton {
+    list-style-image: url(chrome://calendar-common/skin/icons/complete.svg);
+}
+
+.imipDeclineCounterButton,
+.imipDeclineRecurrencesButton,
+.imipDeclineButton {
+    list-style-image: url(chrome://calendar-common/skin/icons/decline.svg);
+}
+
+.imipTentativeRecurrencesButton,
+.imipTentativeButton {
+    list-style-image: url(chrome://calendar-common/skin/icons/tentative.svg);
+}
+
+.imipDetailsButton {
+    list-style-image: url(chrome://calendar-common/skin/icons/find.svg);
+}
+
+.imipAddButton {
+    list-style-image: url(chrome://calendar-common/skin/icons/newevent.svg);
+}
+
+.imipRescheduleButton,
+.imipUpdateButton {
+    list-style-image: url(chrome://calendar-common/skin/icons/synchronize.svg);
+}
+
+.imipDeleteButton {
+    list-style-image: url(chrome://calendar-common/skin/icons/delete.svg);
+}
+
+.imipReconfirmButton {
+    list-style-image: url(chrome://calendar-common/skin/icons/priority.svg);
 }
