Bug 1404696 - Follow-up: Change #attachmentIcon to SVG. r=jorgk

--- a/mail/themes/osx/mail/messageHeader.css
+++ b/mail/themes/osx/mail/messageHeader.css
@@ -57,8 +57,11 @@
 }
 
 #attachmentIcon {
-  list-style-image: url("chrome://messenger/skin/icons/attachment.png");
+  list-style-image: url("chrome://messenger/skin/icons/attach.svg");
   margin-inline-start: 5px;
+  -moz-context-properties: fill, fill-opacity;
+  fill: currentColor;
+  fill-opacity: var(--toolbarbutton-icon-fill-opacity);
 }
 
 #attachmentName:hover,
