--- a/mail/themes/linux/mail/messageHeader.css
+++ b/mail/themes/linux/mail/messageHeader.css
@@ -81,9 +81,11 @@
 }
 
 #attachmentIcon {
-  list-style-image: url("chrome://messenger/skin/icons/filterbar.png");
-  -moz-image-region: rect(0px, 80px, 16px, 64px);
+  list-style-image: url("chrome://messenger/skin/icons/attach.svg");
   margin-inline-start: 5px;
+  -moz-context-properties: fill, fill-opacity;
+  fill: currentColor;
+  fill-opacity: var(--toolbarbutton-icon-fill-opacity);
 }
 
 #attachmentName:hover,
