Backed out changeset d20464aedc17 (bug 1404697) for package problems. a=backout

--- a/calendar/base/themes/linux/today-pane.css
+++ b/calendar/base/themes/linux/today-pane.css
@@ -78,6 +78,16 @@
   max-width: 18px;
 }
 
+#todaypane-new-event-button {
+  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#newevent);
+}
+
 #todaypane-new-event-button[disabled="true"] > .toolbarbutton-icon {
   opacity: 0.4;
+}
+
+#todaypane-new-event-button > .toolbarbutton-icon {
+  width: 18px;
+  height: 18px;
+  margin: -1px;
 }
