--- a/calendar/base/themes/osx/dialogs/calendar-event-dialog.css
+++ b/calendar/base/themes/osx/dialogs/calendar-event-dialog.css
@@ -13,3 +13,135 @@
 #timezone-endtime {
     margin-inline-start: 15px;
 }
+
+/*--------------------------------------------------------------------
+ *   Event dialog toolbar buttons
+ *-------------------------------------------------------------------*/
+
+@media not all and (-moz-mac-yosemite-theme) {
+  #button-save {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar-osxlion.svg#save);
+  }
+
+  #button-saveandclose {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar-osxlion.svg#save-close);
+  }
+
+  #button-attendees {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar-osxlion.svg#address);
+  }
+
+  #button-privacy {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar-osxlion.svg#security);
+  }
+
+  #button-url {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar-osxlion.svg#attach);
+  }
+
+  #button-priority {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar-osxlion.svg#priority);
+  }
+
+  #button-status {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar-osxlion.svg#status);
+  }
+
+  #button-freebusy {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar-osxlion.svg#freebusy);
+  }
+
+  #button-timezones {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar-osxlion.svg#timezones);
+  }
+
+  #button-delete.cal-event-toolbarbutton {
+    /* !important to override the SM #button-delete states */
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar-osxlion.svg#delete) !important;
+    -moz-image-region: auto !important;
+  }
+}
+
+@media (-moz-mac-yosemite-theme) {
+  #button-save {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#save-flat);
+  }
+
+  #button-saveandclose {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#save-close-flat);
+  }
+
+  #button-attendees {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#address-flat);
+  }
+
+  #button-privacy {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#security-flat);
+  }
+
+  #button-url {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#attach);
+  }
+
+  #button-priority {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#priority-flat);
+  }
+
+  #button-status {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#status-flat);
+  }
+
+  #button-freebusy {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#freebusy-flat);
+  }
+
+  #button-timezones {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#timezones-flat);
+  }
+
+  #button-delete.cal-event-toolbarbutton {
+    /* !important to override the SM #button-delete states */
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#delete) !important;
+    -moz-image-region: auto !important;
+  }
+}
+
+toolbar[brighttext] #button-save {
+  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#save-inverted);
+}
+
+toolbar[brighttext] #button-saveandclose {
+  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#save-close-inverted);
+}
+
+toolbar[brighttext] #button-attendees {
+  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#address-inverted);
+}
+
+toolbar[brighttext] #button-privacy {
+  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#security-inverted);
+}
+
+toolbar[brighttext] #button-url {
+  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#attach-inverted);
+}
+
+toolbar[brighttext] #button-delete.cal-event-toolbarbutton {
+  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#delete-inverted) !important;
+}
+
+toolbar[brighttext] #button-priority {
+  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#priority-inverted);
+}
+
+toolbar[brighttext] #button-status {
+  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#status-inverted);
+}
+
+toolbar[brighttext] #button-freebusy {
+  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#freebusy-inverted);
+}
+
+toolbar[brighttext] #button-timezones {
+  list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#timezones-inverted);
+}
