--- a/calendar/base/themes/windows/dialogs/calendar-event-dialog.css
+++ b/calendar/base/themes/windows/dialogs/calendar-event-dialog.css
@@ -13,3 +13,124 @@
 #timezone-endtime {
     margin-inline-start: 16px;
 }
+
+#button-save {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#save);
+}
+
+#button-saveandclose {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#save-close);
+}
+
+#button-attendees {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#address);
+}
+
+#button-privacy {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#security);
+}
+
+#button-url {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#attach);
+}
+
+#button-delete.cal-event-toolbarbutton {
+    /* !important to override the SM #button-delete states */
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#delete) !important;
+    -moz-image-region: auto !important;
+}
+
+#button-priority {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#priority);
+}
+
+#button-status {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#status);
+}
+
+#button-freebusy {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#freebusy);
+}
+
+#button-timezones {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#timezones);
+}
+
+toolbar[brighttext] #button-save {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#save-inverted);
+}
+
+toolbar[brighttext] #button-saveandclose {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#save-close-inverted);
+}
+
+toolbar[brighttext] #button-attendees {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#address-inverted);
+}
+
+toolbar[brighttext] #button-privacy {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#security-inverted);
+}
+
+toolbar[brighttext] #button-url {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#attach-inverted);
+}
+
+toolbar[brighttext] #button-delete.cal-event-toolbarbutton {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#delete-inverted) !important;
+}
+
+toolbar[brighttext] #button-priority {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#priority-inverted);
+}
+
+toolbar[brighttext] #button-status {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#status-inverted);
+}
+
+toolbar[brighttext] #button-freebusy {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#freebusy-inverted);
+}
+
+toolbar[brighttext] #button-timezones {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#timezones-inverted);
+}
+
+#calendar-event-dialog > #event-toolbox > #event-toolbar {
+    padding-bottom: 2px;
+}
+
+@media (-moz-os-version: windows-win8) and (-moz-windows-default-theme),
+       (-moz-os-version: windows-win10) and (-moz-windows-default-theme) {
+  #button-save {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#save-flat);
+  }
+
+  #button-saveandclose {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#save-close-flat);
+  }
+
+  #button-attendees {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#address-flat);
+  }
+
+  #button-privacy {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#security-flat);
+  }
+
+  #button-priority {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#priority-flat);
+  }
+
+  #button-status {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#status-flat);
+  }
+
+  #button-freebusy {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#freebusy-flat);
+  }
+
+  #button-timezones {
+    list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#timezones-flat);
+  }
+}
